# rocket-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
dev_tools/: benchmark.py
py/src/rocket/: __init__.py
py/src/rocket_rs/: __init__.py  _transform.py  _utils.py
py/tests/: test_rocket.py  test_rocket_against_aeon.py
rs/src/: lib.rs
